--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         </nav>
       </div>
     </header>
-
+<hr>
     <main>
       <section class="skills">
         <div>
@@ -35,6 +35,7 @@
           </p>
         </div>
       </section>
+      <hr>
       <section>
         <div>
           <ul style="list-style-type: square">
@@ -48,8 +49,8 @@
           impedit laboriosam voluptatem nobis.
         </div>
       </section>
-
-      <section>
+<hr>
+      <section class=" Achievement">
         <div>
           <ul>
             <li>
@@ -57,13 +58,16 @@
             </li>
           </ul>
           <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit.
-            Accusantium, quis. Commodi quas laboriosam maxime aliquid, rem
-            similique voluptates eius impedit eos ullam amet fugiat ipsam neque
-            accusantium, tenetur fugit assumenda!
+            <ul>
+                <li>Student of the year award</li>
+                <li>Best Recitation Award</li>
+                <li>Web Development AWard</li>
+
+            </ul>
           </p>
         </div>
       </section>
+      <hr>
     </main>
   </body>
 </html>
